# DarrJorgeEngineGL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  clean.bat  clean.sh  conanfile.txt  format_all_files.bat  format_all_files.sh  generate_project_files.bat  generate_project_files.sh
Engine/: CMakeLists.txt  EngineConfig.h.template
Engine/Source/: main.cpp  pch.h
Engine/Source/Core/: Engine.cpp  Engine.h  MathTypes.cpp  MathTypes.h  Utility.h
Engine/Source/Log/: Log.cpp  Log.h
Engine/Source/Render/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLRenderDevice.cpp  GLRenderDevice.h  GLRendererAPI.cpp  GLRendererAPI.h  GLVertexArray.cpp  GLVertexArray.h
Engine/Source/Render/RHI/: IBuffer.cpp  IBuffer.h  RenderDevice.h  Shader.cpp  Shader.h  VertexArray.h
Engine/Source/Render/Renderer/: RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h
Engine/Source/Window/: IWindow.h  IWindowManager.h  WindowManager.cpp  WindowManager.h
Engine/Source/Window/GLFW/: GLFWWindow.cpp  GLFWWindow.h  GLFWWindowManager.cpp  GLFWWindowManager.h
Engine/Source/Window/WinAPI/: WinAPIWindow.cpp  WinAPIWindow.h  WinAPIWindowManager.cpp  WinAPIWindowManager.h
automation/: automation.py  build.bat  build.sh
automation/CMake/: CMakeHelpers.cmake
automation/ConanProfiles/: linuxDebug  linuxRelease  macosDebug  macosRelease  windowsDebug  windowsRelease
